@@ -19,9 +19,9 @@
 	Email: \email{pje@telecommunity.com}
 }
 
-\date{December 5, 2003}       % update before release!
+\date{March 8, 2004}       % update before release!
 
-\release{0.9.2}     % release version; this is used to define the
+\release{0.9.3}     % release version; this is used to define the
                   % \version macro
 
 \makeindex          % tell \index to actually write the .idx file
